adding menus and new dnld btn

--- a/RosiesKitchen.html
+++ b/RosiesKitchen.html
@@ -91,7 +91,7 @@
             <div class="col-sm-8">
                 <h2 class="featurette-heading">We proudly cater <span class="text-muted">ALL</span> your events!</h2>
                 <p class="lead">We are a full service catering company based in Charlotte, NC serving: weddings, small-mid sized corporate events, and all of your custom events! We strive to make our food delicious, our catering service superior, and your experience delightful and memorable. Give us a call and tell us about your next event!</p>
-                    <a class="btn btn-default btn-lg" href="assets/images/MilesToGoCateringMenu.doc">Menu Download &raquo;</a>
+                    <a class="btn btn-default btn-lg" href="assets/images/RosiesMenu1.png">Front Menu Download &raquo;</a> <a class="btn btn-default btn-lg" href="assets/images/RosiesMenu2.png">Back Menu Download &raquo;</a>
                 </p>
             </div>
             
@@ -131,9 +131,9 @@
                     <br>
                 </address>
                 <address>
-                    <abbr title="Phone">P:</abbr>(980) 355-0282
+                    <abbr title="Phone"><b>P:</b></abbr><b>(980) 355-0282</b>
                     <br>
-                    <abbr title="Email">E:</abbr> <a href="mailto:#">rosieskitchencharlotte@gmail.com</a>
+                    <abbr title="Email"><b>E:</b></abbr> <a href="mailto:#"><b>rosieskitchencharlotte@gmail.com</b></a>
                 </address>
             </div>
         </div> 
