fixing small screen size

--- a/RosiesKitchen.html
+++ b/RosiesKitchen.html
@@ -73,10 +73,11 @@
                 <div class="col-lg-6 col-md-6 col-sm-12">
                    <!--  <h1 class="tagline">Rosies Kitchen Charlotte</h1> -->
                     <img class="img img-responsive" src="assets/images/logo1.png" />
-                    <p><i>"Southern hospitality with an UpNorth vibe!!"</i></p>
                 </div>
-                <div class="col-lg-6 col-md-6">    
-                   
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">    
+                   <p><i>"Southern hospitality with an UpNorth vibe!!"</i></p>
                 </div>
             </div>
         </div>
